Draft and Champions view, and architecture changes