@@ -49,34 +49,53 @@ public class Pilot implements Serializable, StatsMonitorable, Comparable<Pilot> 
 	  switch (time) {
 	  case SEASON:
 	    if(lifeStats.getSeasons() != 0) {
-	      return new Double(stats.getSeason().getPts()) / new Double(lifeStats.getSeasons());
+	      return Double.valueOf(stats.getSeason().getPts()) / Double.valueOf(lifeStats.getSeasons());
 	    }
 	  case PPLAYOFF:
 	    if(lifeStats.getpPlayoffs() != 0) {
-	      return new Double(stats.getpPlayoff().getPts()) / new Double(lifeStats.getpPlayoffs());
+	      return Double.valueOf(stats.getpPlayoff().getPts()) / Double.valueOf(lifeStats.getpPlayoffs());
 	    }
 	  case TPLAYOFF:
 	    if(lifeStats.gettPlayoffs() != 0) {
-	      return new Double(stats.gettPlayoff().getPts()) / new Double(lifeStats.gettPlayoffs());
+	      return Double.valueOf(stats.gettPlayoff().getPts()) / Double.valueOf(lifeStats.gettPlayoffs());
 	    }
 	  }
 	  return 0.0;
   }
 	
 	@JsonIgnore
+	public Double getWPR(LeagueTime time) {
+		switch (time) {
+		case SEASON:
+			if(lifeStats.getSeasons() != 0) {
+				return Double.valueOf(stats.getSeason().getP1st()) / Double.valueOf(lifeStats.getSeasons());
+			}
+		case PPLAYOFF:
+			if(lifeStats.getpPlayoffs() != 0) {
+				return Double.valueOf(stats.getpPlayoff().getP1st()) / Double.valueOf(lifeStats.getpPlayoffs());
+			}
+		case TPLAYOFF:
+			if(lifeStats.gettPlayoffs() != 0) {
+				return Double.valueOf(stats.gettPlayoff().getP1st()) / Double.valueOf(lifeStats.gettPlayoffs());
+			}
+		}
+		return 0.0;
+	}
+	
+	@JsonIgnore
 	public Double getPerPR(LeagueTime time) {
 	  switch (time) {
 	  case SEASON:
 	    if(lifeStats.getSeasons() != 0) {
-	      return new Double(stats.getSeason().getPer()) / new Double(lifeStats.getSeasons());
+	      return Double.valueOf(stats.getSeason().getPer()) / Double.valueOf(lifeStats.getSeasons());
 	    }
 	  case PPLAYOFF:
 	    if(lifeStats.getpPlayoffs() != 0) {
-	      return new Double(stats.getpPlayoff().getPer()) / new Double(lifeStats.getpPlayoffs());
+	      return Double.valueOf(stats.getpPlayoff().getPer()) / Double.valueOf(lifeStats.getpPlayoffs());
 	    }
 	  case TPLAYOFF:
 	    if(lifeStats.gettPlayoffs() != 0) {
-	      return new Double(stats.gettPlayoff().getPer()) / new Double(lifeStats.gettPlayoffs());
+	      return Double.valueOf(stats.gettPlayoff().getPer()) / Double.valueOf(lifeStats.gettPlayoffs());
 	    }
 	  }
 	  return 0.0;
